# cg_from_scratch

./: Cargo.toml
cpp/: App.cpp  App.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Main.cpp  RTSpheres.cpp
cpp/math/: CMakeLists.txt  Vector.h  test_vector.cpp
rust/: Cargo.toml
rust/src/: canvas.rs  color.rs  main.rs
src/: canvas.rs  main.rs
